--- a/index.html
+++ b/index.html
@@ -8,4 +8,5 @@
   <h1>Yet Another Change</h1>
 
 <h2> This is Lisa's app.  How cool! </h2>
-<br> Here is another update. Yo! </br>
+
+<b> Here is another update. Yo! </b>
